# tracked_vehicle_demo

./: .gitmodules  README.md
autogen_terrain/: model.config  model.sdf
docs/: DEPEND.md
tools/dockerScript/.devcontainer/: Dockerfile  devcontainer.json  open.sh
tools/q2se3/: q2se3
tracked_navigation/elevation_mapping/elevation_mapping_demos/scripts/: tf_to_pose_publisher.py
tracked_navigation/octo2grid_core/: CMakeLists.txt  package.xml
tracked_navigation/octo2grid_core/include/octo2grid_core/: GridMapOctomapConverter.hpp  octo2grid_core.hpp
tracked_navigation/octo2grid_core/src/: GridMapOctomapConverter.cpp
tracked_navigation/octo2grid_node/: CMakeLists.txt  package.xml
tracked_navigation/octo2grid_node/config/: octo2grid_config.yaml
tracked_navigation/octo2grid_node/include/octo2grid_node/: Octo2Grid.hpp
tracked_navigation/octo2grid_node/launch/: octo2grid.launch  octomap_to_gridmap_demo.launch
tracked_navigation/octo2grid_node/rviz/: octo2grid.rviz
tracked_navigation/octo2grid_node/src/: Octo2Grid.cpp  OctomapToGridmapDemo.cpp  octo2grid_node.cpp  octomap_to_gridmap_demo_node.cpp
tracked_navigation/tracked_mapping/: CMakeLists.txt  package.xml
tracked_navigation/tracked_mapping/config/grid_map_config/: global_gridmap_filter.yaml  local_gridmap_viz.yaml
tracked_navigation/tracked_mapping/config/navi_config/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
tracked_navigation/tracked_mapping/launch/: stereo.launch  test_cost_map.launch  test_global_elevation.launch  test_local_elevation.launch
tracked_navigation/tracked_mapping/rviz/: stereo_outdoor.rviz
tracked_navigation/tracked_navigation/: CMakeLists.txt  package.xml
tracked_simulator/tracked_description/: CMakeLists.txt  package.xml
tracked_simulator/tracked_description/config/grid_map_config/: _deprecated_local_slope.yaml  filters_demo.yaml  global_slope.yaml  octomap_to_gridmap.yaml  tutorial_demo.yaml
tracked_simulator/tracked_description/config/heightmap_config/: global_robot.yaml  robot.yaml
tracked_simulator/tracked_description/config/navi_config/: global_costmap_params.yaml
tracked_simulator/tracked_description/config/vins_config/: cam1_pinhole.yaml  euroc_stereo_imu_config.yaml
tracked_simulator/tracked_description/include/gazebo_plugins/: TrackedVehiclePlugin.h  WheelTrackedVehiclePlugin.h  gazebo_ros_p3d.h  gazebo_ros_tracked_drive.h
tracked_simulator/tracked_description/launch/: description.launch  display.launch  empty_world.launch  mountain_world.launch
tracked_simulator/tracked_description/rviz/: display.rviz  ground_truth.rviz  stereo_outdoor.rviz
tracked_simulator/tracked_description/src/gazebo_plugins/: TrackedVehiclePlugin.cc  WheelTrackedVehiclePlugin.cc  gazebo_ros_p3d.cpp  gazebo_ros_tracked_drive.cpp
tracked_simulator/tracked_description/src/gt_publisher/: gt_publisher_node.cpp
tracked_simulator/tracked_description/urdf/tracked_vehicle/: imu.gazebo.xacro  track.urdf.xacro  tracked_vehicle.urdf.xacro  wheel.urdf.xacro  zed.gazebo.xacro  zed.urdf.xacro
tracked_simulator/tracked_description/worlds/: empty.world  mountain.world
tracked_simulator/tracked_simulator/: CMakeLists.txt  package.xml
