<?xml version="1.0"?>
<package format="2">
  <name>tracked_description</name>
  <version>1.0.0</version>
  <description>The tracked_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="docker_ros@todo.todo">docker_ros</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_plugins</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <gazebo_ros gazebo_model_path="${prefix}/models"/> -->
    <gazebo plugin_path="${prefix}/lib" />
  </export>

</package>
